--- a/相关文档/代码规范.md
+++ b/相关文档/代码规范.md
@@ -20,7 +20,7 @@
 	beta0 = params['beta0'].value    # 阐述了这句代码的功能
 	```
 
-+ 方法定义语句上不需要写返回值类型eg: <code>->str/***</code>
++ 方法定义语句上不需要写返回值类型eg: <code>->str/***</code> 这样写将导致编译出错
 
 	✅正确方法定义写法：
 
@@ -34,7 +34,7 @@
 	def fun1min(params, x, y)->str:
 	```
 
-+ 方法的返回语句不能够是一串表达式，应该写为变量返回的形式。
++ 方法的返回语句不能够是一串表达式，应该写为变量返回的形式。如果写成了表达式的形式将导致代码转换错误 无法成功编译
 
 	✅正确的返回方式
 
@@ -49,4 +49,4 @@
 	return model - y
 	```
 
-+ 
++ 一个方法内调用的方法如果不是安装的第三方包，那么这个方法只能在当前文件中，不能是在其他文件中，如果在其他文件中将导致找不到调用的方法，组件无法运行 
