由递归改为非递归遍历的存档

--- a/展示AST/完成任务备忘.md
+++ b/展示AST/完成任务备忘.md
@@ -1,1 +1,36 @@
-https://elsjckling.github.io/2021/07/14/Other/Python%20ast%20%E6%A8%A1%E5%9D%97%E4%BD%BF%E7%94%A8/
+# 完成任务过程备忘
+
+方法调用节点有两种类型，一种是xxx.xxx()的方式。一种是xxx()的方式，这两种方式对应的call节点是不一样的。
+
+xxx.xxx()对应的call节点如下：
+
+```python
+Call(func=Attribute(
+            value=Name(
+              id='params',
+              ctx=Load()),
+            attr='add',
+            ctx=Load()),
+          args=[Constant(
+            value='sk2',
+            kind=None)],
+          keywords=[keyword(
+            arg='value',
+            value=Constant(
+              value=1.0,
+              kind=None))])
+```
+
+xxx()对应的call方式如下所示：
+
+```python
+Call(func=Name(
+            id='load_data',
+            ctx=Load()),
+          args=[],
+          keywords=[]))
+```
+
+
+
+暂时不需要将类中的方法转换为组件，因为类中的方法可能对同一个类属性进行修改 。如果单个方法要拿出来使用的话这将会是一个问题，暂时不处理类方法代码。
