--- a/展示AST/结果文档.md
+++ b/展示AST/结果文档.md
@@ -27,7 +27,9 @@
 + 一个py文件里面只能够存在两种代码，如果存在其他代码可能会引起代码转换错误
 
 	+ 导包代码
-	+ 方法代码
+	+ 1方法代码
+
++ 不能够在方法内部去定义方法
 
 + 方法定义语句上不需要写返回值类型eg: <code>->str/***</code> 这样写将导致编译出错
 
@@ -139,7 +141,15 @@ def load_data(url_input:Input[Dataset], filename_input:Input[Dataset], url1_inpu
 
 ### 代码生成过程
 
-+ 匹配到方法的导包语句，并
++ 匹配到方法的导包语句，并添加joblib包
++ 在源文件顶部添加pipeline SDK的导包语句
++ 扫描所有的方法，将所有的方法代码保存到map中以便后序方法调用代码转换
++ 通过正则匹配到方法定义代码，将方法定义代码中形参进行转换，并添加上输出元数据的形参
++ 生成当前方法定义代码的装饰器代码，并将装饰器代码添加到方法定义代码的上一行
++ 将导包语句添加到方法定义代码的下一行
++ 扫描整个方法的代码，获取到方法调用的代码，将被调用的方法代码添加到当前方法体中，并放到导包语句下
++ 将方法原有形参通过加载元数据的方式进行还原
++ 扫描到方法返回代码，将方法返回代码修改为落地到元数据指向位置的代码
 
 ### 采用AST的方式处理代码
 
@@ -155,11 +165,12 @@ def load_data(url_input:Input[Dataset], filename_input:Input[Dataset], url1_inpu
 
 + 读取源代码，将代码使用ast包转换成ast对象，并传入visit类进行遍历
 + 首先使用循环的方式遍历一遍源代码的所有顶层节点，将方法节点对应的方法名和方法节点类放到一个字典中以供后序调用。
++ 添加visit_ClassDef扫描类定义，将类定义的代码添加到字典中。
 + 在ast.NodeTransformer实现类中添加不同节点的实现方法：visit_Import、visit_ImportFrom、visit_Return、visit_FunctionDef、visit_Call，不同的vist方法使用的是不同节点的访问方法。
 + 采用后序遍历的方式，首先遍历一个节点的所有子节点，获取到全局的导包语句、当前方法节点的子节点中的其他方法调用节点。将全局的导包语句都存储到list中，将调用其他方法节点获取到之后获取被调用方法的方法名。
 + 大多数的逻辑写在visit_FunctionDef方法中，这是方法定义节点的处理方法，这个方法会在当前方法节点所有子节点visit之后调用，首先遍历方法的参数节点，将参数节点的参数名和参数类型进行重新处理，添加返回参数元数据形参，并替换掉原来的形参节点。
 + 在方法体的下一行添加导包语句节点，体现在代码上就是在方法定义语句的下一行添加导包语句
-+ 添加完导包语句之后添加当前方法所调用方法的方法节点。获取到存储的方法节点，获取到方法节点之后添加到导包节点之后
++ 添加完导包语句之后添加当前方法所调用方法的方法节点。获取到存储的方法节点，获取到方法节点之后添加到导包节点之后。扫描方法节点的同时扫描类的初始化调用节点，如果有的话就将类代码添加到导包节点之后
 + 添加调用方法节点之后添加原有形参还原的代码节点。获取到原有形参名，使用字符串拼接的方式拼接出从元数据中加载数据的代码，并使用ast包转换为AST节点，并将节点添加到方法定义语句之后
 + 获取到Return节点，将return节点还原为字符串形式的代码，使用字符串的形式进行返回元数据的封装和逻辑代码的生成，生成之后使用ast包封装为node节点并替换原有的return节点。
 + 使用字符串的形式生成组件装饰器代码，并使用ast包转换为装饰器节点添加到方法节点的指定属性上。
@@ -171,6 +182,13 @@ def load_data(url_input:Input[Dataset], filename_input:Input[Dataset], url1_inpu
 	+ 处理逻辑简单，逻辑清晰
 	+ 能够处理一个python工程的代码
 	+ 开发出来的程序健壮性高，可维护性好。
+	+ 能够匹配到类的使用并将类的使用也添加到方法调用代码中
 + 局限性
 	+ 仍存在ast不能解决的节点，此类节点需要将ast节点转化为字符串的方式进行处理。
 	+ 存在一定的学习成本
+
+## 整体方法目前还存在的不足
+
++ 暂时没有完成整个python项目的扫描
+
+	
