开始实际对sklearn代码进行转换，并且根据报错调整代码

--- a/展示AST/完成任务备忘.md
+++ b/展示AST/完成任务备忘.md
@@ -33,4 +33,36 @@ Call(func=Name(
 
 
 
-暂时不需要将类中的方法转换为组件，因为类中的方法可能对同一个类属性进行修改 。如果单个方法要拿出来使用的话这将会是一个问题，暂时不处理类方法代码。
+
+
+## 类问题的解决
+
+出现的问题：	
+
++ 代码中类的使用
+
+	一个项目中使用了很多个类，如果一个方法中使用了一个类。脚本会将类的定义代码搬到方法体中。
+
+	+ 解决办法：
+		+ 在递归遍历代码之前先扫描所有的方法将所有的类都提取出来
+		+ 遍历所有的方法和方法中的方法调用（除类外，此时类已经被删掉了）
+
+	+ 存在的问题：
+
+		+ 类继承类，
+
+		
+
+
+
+
+
+## python项目问题的解决
+
++ 思路
+
+	+ 首先遍历一遍每一个源文件顶层的方法和类，并将这些方法和类存放在对应的列表中
+	+ 再对代码进行遍历
+
+	
+
