--- a/Sklearn convert/集成手写数字识别过程中遇到的问题.md
+++ b/Sklearn convert/集成手写数字识别过程中遇到的问题.md
@@ -18,6 +18,10 @@
 
 	方法中引用方法问题：目前是采用在转换遍历之前先扫描所有的方法，将所有的方法保存下来。再从头扫描每一个方法，检查每一个方法所调用的方法，并将这些方法先引入到方法列表中来。
 
+包引入问题：
+
+​	
+
 ## 关于源码转换的思考
 
 ​	对源码进行转换还是对源码API的调用进行转换？那种转换方式更加合理？
