--- a/Sklearn convert/集成手写数字识别过程中遇到的问题.md
+++ b/Sklearn convert/集成手写数字识别过程中遇到的问题.md
@@ -17,6 +17,12 @@
 	第三方包问题：在第一次扫描方法和类的时候将对应文件的import语句节点保存下来，当需要使用到这些方法的时候将方法引入的同时引入方法依赖的第三方包
 
 	方法中引用方法问题：目前是采用在转换遍历之前先扫描所有的方法，将所有的方法保存下来。再从头扫描每一个方法，检查每一个方法所调用的方法，并将这些方法先引入到方法列表中来。
+	
+	​	使用这个方法会出现的问题：
+	
+	​		方法A调用了方法B，方法B调用了方法C，方法ABC的原始方法定义节点都在方法列表里，现在我们对方法进行扫描
+	
+	
 
 包引入问题：
 
