--- a/Sklearn convert/集成手写数字识别过程中遇到的问题.md
+++ b/Sklearn convert/集成手写数字识别过程中遇到的问题.md
@@ -35,3 +35,23 @@
    将方法转换为组件其目的是对外提供组件的调用，将以前调用方法的形式转变成为对组件的调用，而不是对组件源码进行组件化。在调用sklearn中某一个API的时候并不会关心这个API内部的源码是如何构成的。我们目前所做的工作是获取sklearn的源码，将源码里面的每一个方法都转换成为一个组件，但是有些方法并不会对外提供功能，他只是对sklearn内部提供作用。因此这类方法的转换将是无用功，并且对sklearn包中对外提供功能的那部分API方法进行转换的时候需要将这个方法需要依赖的方法都搬到当前方法中提高了整个组件的复杂度。
 
 ​		提出一种解决方式：在sklearn api的基础之上进行一层API调用的方法封装，封装好之后对封装的方法进行组件化。这样写的话就不会触碰到sklearn的源码，因此方法调用就可以直接引入sklearn包，sklearn中类的使用也可以直接解决。这种方式的坏处就是需要投入较大的工作量去对框架API 进行再封装。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+单个组件运行的日志，根据日志显示可以知道，元数据是统一存的
+
+
+
+![image-20220325110350027](集成手写数字识别过程中遇到的问题.assets/image-20220325110350027-8177431.png)
