--- a/Sklearn convert/其他转换情况及其思考和发现.md
+++ b/Sklearn convert/其他转换情况及其思考和发现.md
@@ -1,4 +1,4 @@
-# 
+# if和for在pipeline中存在示例
 
 pipeline中可以存在if的关系，如果满足情况才走这条支线或者是才执行这一个组件
 
@@ -62,3 +62,58 @@ pipeline 图
 不满足情况不执行的情况
 
 ![image-20220330231930119](其他转换情况及其思考和发现.assets/image-20220330231930119.png)
+
+
+
+for循环
+
+官方示例介绍
+
+This recursive sub-pipeline trains a model, evaluates it, calculates the metrics and checks them.If the model error is too high, then more training is performed until the model is good.
+
+循环使用的是递归的方式来实现的，在最后不满足/满足条件时再调用自己（就类似于循环了），当然就是自己调用自己了，后来发现，这种循环封装的方法是特殊的装饰器修饰的，封装的方法不属于组件而是属于特殊的循环描述（可以理解为子pipeline）。因此组件调用组件的方式还是不可行。
+
+在循环图内不能够存在包安装声明-----组件定义中声明的当前组件需要那些第三方包。因此循环定义的方法中不能有普通的代码，只能够类似于pipeline的使用方式-----只有组件的调用
+
+循环实现案例：
+
+```python
+# This recursive sub-pipeline trains a model, evaluates it, calculates the metrics and checks them.
+# If the model error is too high, then more training is performed until the model is good.
+@kfp.dsl.graph_component # 循环图声明，
+def train_until_low_error(starting_model, training_data, true_values):
+    # Training
+    model = xgboost_train_on_csv_op(
+        training_data=training_data,
+        starting_model=starting_model,
+        label_column=0,
+        objective='reg:squarederror',
+        num_iterations=50,
+    ).outputs['model']
+
+    # Predicting
+    predictions = xgboost_predict_on_csv_op(
+        data=training_data,
+        model=model,
+        label_column=0,
+    ).output
+
+    # Calculating the regression metrics    
+    metrics_task = calculate_regression_metrics_from_csv_op(
+        true_values=true_values,
+        predicted_values=predictions,
+    )
+
+    # Checking the metrics
+    with kfp.dsl.Condition(metrics_task.outputs['mean_squared_error'] > 0.01):
+        # Training some more
+        train_until_low_error(
+            starting_model=model,
+            training_data=training_data,
+            true_values=true_values,
+        )
+```
+
+
+
+![image-20220331094559943](其他转换情况及其思考和发现.assets/image-20220331094559943-8691161.png)
