--- a/pipeline-script/相关文档/代码规范.md
+++ b/pipeline-script/相关文档/代码规范.md
@@ -36,17 +36,17 @@
 
 + 方法的返回语句不能够是一串表达式，应该写为变量返回的形式。如果写成了表达式的形式将导致代码转换错误 无法成功编译
 
-	✅正确的返回方式
+  ✅正确的返回方式
 
-	```python
-	res_model = model - y
-	return res_model
-	```
+  ```python
+  res_model = model - y
+  return res_model
+  ```
 
-	❌错误的表达方式
+  ❌错误的表达方式
 
-	```python
-	return model - y
-	```
+  ```python
+  return model - y
+  ```
 
-+ 一个方法内调用的方法如果不是安装的第三方包，那么这个方法只能在当前文件中，不能是在其他文件中，如果在其他文件中将导致找不到调用的方法，组件无法运行 
+  ~~一个方法内调用的方法如果不是安装的第三方包，那么这个方法只能在当前文件中，不能是在其他文件中，如果在其他文件中将导致找不到调用的方法，组件无法运行~~
