--- a/思路总结/组件全流程开发思路总结.md
+++ b/思路总结/组件全流程开发思路总结.md
@@ -1,6 +1,26 @@
-# 组件全流程开发思路总结
+# 基于Kubeflow的机器学习服务组件化开发方法
+
+## 引言
+
+机器学习是一个近年来迅速崛起的领域，得到了广大开发人员的关注。然而，开发出一个新的机器学习模型并不容易，首先需要深厚的机器学习理论知识，其次需要大量的训练数据（对于深度学习，尤其如此），
 
 ## 基于Kubeflow的分布式组件化开发框架方法
+
+
+
+服务
+
+机器学习服务
+
+组件
+
+组件化
+
+服务的组件化
+
+开发方法
+
+
 
 ​		kubeflow主要的功能之一是pipeline，每一个pipeline是由多个运算组件(component)前后连接组成。我们只需要使用kubeflow官方python SDK进行开发组件代码，开发完成之后进行编译便可以得到组件对应的yaml文件，当我们需要使用组件的时候只需要根据URL加载组件yaml为组件即可调用。同时可以将组件放在统一的一个地方，当需要构建pipeline的时候直接去组件仓库中挑选出需要的组件，加载到当前pipeline中，并以数据为驱动进行pipeline的前后连接，连接好之后进行编译，SDK会将pipeline代码编译为一个pipeline的yaml，将yaml提交到kubeflow的pipeline功能中就可以对pipeline进行计算了，在计算的过程中，对pipeline中组件的调度和数据的传输都是kubeflow来完成的，开发者只需要关注组件本身的编写以及pipeline的构建。
 
