--- a/思路总结/修改/组件思考.md
+++ b/思路总结/修改/组件思考.md
@@ -2,5 +2,7 @@
 
 功能组件应该具有以下特点：
 
-+ 具有较高的可重用性、可定制性（参数和属性可以动态设置）、自包容性（工程相对完整）
-+ 一个特定的组件单独完成一个特点的功能。
++ 具有较高的可重用性、可定制性（参数和属性可以动态设置）、自包容性（工程相对完整，闭包）
++ 一个特定的组件单独完成一个特定的功能。
++ 
++ 
