--- a/思路总结/组件总结.md
+++ b/思路总结/组件总结.md
@@ -72,4 +72,26 @@
 
 ### 机器学习组件化搭载平台
 
-当前平台采用Kubeflow作为组件流程PIpeline的
+在当前平台中，需要一种组件的搭载平台，该平台需要具有以下功能：
+
++ Pipeline的调度功能、调度过程中元数据的管理功能
++ Pipeline编排功能
++ 组件动态加载功能
++ 调度运行Pipeline中的组件时，环境相对独立且隔离
++ 分布式调度功能
+
+在满足以上功能条件的基础之上，我们找到了Kubeflow和Airflow两个调度框架，这两个调度框架都从不同程度和不同方向上满足了以上功能需求。
+
+##### <u>AirFlow</u>
+
+AirFlow是一个使用Python语言编写的data pipeline调度和监控工作流平台。AirFlow是通过Pipeline来管理任务流程的任务调度工具。在完整的生产环境中，AirFlow包含以下组件：
+
++ 元数据库：这个数据库存储有关任务的状态信息。
++ 调度器：对Pipeline中的组件进行调度。
++ 执行器：用于确定实际执行每个组件的工作进程。
+
+##### <u>Kubeflow</u>
+
+Kubeflow运行在Kubernetes上。kubeflow具有云原生的特性：弹性伸缩、高可用、DevOps等.其集成了大量机器学习所用到的工具，例如Jupyter、Tensorflow/Pytorch、Pipelines等。
+
+在我们当前平台，主要是使用Kubeflow的核心组件Pipelines，Kubeflow的主要目的是简化在Kubernetes上运行机器学习任务流程，并以一套完整可用的Pipeline来实现机器学习全流程。而Pipelines的功能便是对机器学习工作流的编排，能够编译部署机器学习的工作流。
