--- a/思路总结/组件总结.md
+++ b/思路总结/组件总结.md
@@ -70,6 +70,8 @@
 
 组件应该分类别的统一放在组件仓库中集中管理，当需要使用到组件时，客户端程序可以从组件仓库中获取组件。当组件需要更新时，只需要对组件仓库中对应的组件进行上传即可。在使用组件进行机器学习流程编排时，可以选择不同版本的组件。
 
+
+
 ### 机器学习组件化搭载平台
 
 在当前平台中，需要一种组件的搭载平台，该平台需要具有以下功能：
@@ -89,9 +91,39 @@ AirFlow是一个使用Python语言编写的data pipeline调度和监控工作流
 + 元数据库：这个数据库存储有关任务的状态信息。
 + 调度器：对Pipeline中的组件进行调度。
 + 执行器：用于确定实际执行每个组件的工作进程。
++ workers:实际执行组件逻辑的进程。
 
 ##### <u>Kubeflow</u>
 
 Kubeflow运行在Kubernetes上。kubeflow具有云原生的特性：弹性伸缩、高可用、DevOps等.其集成了大量机器学习所用到的工具，例如Jupyter、Tensorflow/Pytorch、Pipelines等。
 
-在我们当前平台，主要是使用Kubeflow的核心组件Pipelines，Kubeflow的主要目的是简化在Kubernetes上运行机器学习任务流程，并以一套完整可用的Pipeline来实现机器学习全流程。而Pipelines的功能便是对机器学习工作流的编排，能够编译部署机器学习的工作流。
+对于当前平台来讲，在Kubeflow中，主要是使用Kubeflow的核心组件Pipelines，Kubeflow的主要目的是简化在Kubernetes上运行机器学习任务流程，并以一套完整可用的Pipeline来实现机器学习全流程。而Pipelines的功能便是对机器学习工作流的编排，能够编译部署机器学习的工作流。
+
+在整体上可以将Pipelines分为八部分：
+
++ Python SDK：用于创建kubeflow pipelines 组件的特定语言（DSL）
+
++ DSL compiler：将Python代码转换成YAML静态配置文件
+
++ Pipeline Web Server：Pipeline的前端服务，用于展示pipeline相关的各种信息
+
++ Pipeline Service：pipeline的后端服务，调用k8s服务从YAML创建pipeline运行
+
++ Kubernetes Resources：创建CRDs运行pipeline
+
++ Machine Learning Metadata Service:监视Pipeline Service创建的k8s资源，并将这些资源的额状态持久化道元数据服务中
+
++ Artifact Storage:存储metadata和Artifact。`Kubeflow Pipelines`将元数据存储在`MySQL`数据库中，将工件存储在[Minio服务器](https://link.zhihu.com/?target=https%3A//docs.minio.io/)或[Cloud Storage](https://link.zhihu.com/?target=https%3A//cloud.google.com/storage/docs/)等工件存储中。
+
++ Orchestration Controllers：任务编排，比如Argo Wrokflow控制器，他可以协调任务驱动的工作流。
+
+	
+
+综合Airflow和Kubeflow的具体用途，可以有如下几点对比：
+
++ 在组件调度的过程当中，Airflow的组件需要组件之间依赖的第三方包版本、环境一致，不能够实现每一个组件都是运行在一个独立的环境当中。
++ Airflow是一个通用的任务编排平台，而Kubeflow特别专注于机器学习任务，两者都是用Python定义Pipeline和组件，但是Kubeflow是在k8s上进行任务运行，对分布式节点的调度更加的方便快捷，不需要进行额外的配置。而在对Airflow进行分布式运行时，其数据需要同步到所有的worker节点，但Airflow不提供数据同步的功能，此功能需要用户自己实现。
++ airflow在Pipeline调度执行期间对组件的日志监控不如Kubeflow对日志监控全面。kubeflow还可以在日之内绘制图表等。
+
+综合来看，使用kubeflow作为平台的搭载和调度工具较为合适。
+
