--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
@@ -1,3 +1,59 @@
 # 构建有效软件重用存储库的渐进方法
 
-文章的目的：描述软件存储库的索引和检索问题，并提供一组旨在支持组件存储库增量优化的工具。
+**文章的目的**：描述软件存储库的索引和检索问题，并提供一组旨在支持组件存储库增量优化的工具。
+
+## 其他的检索算法
+
+在进行组件存储和检索的时候需要有一个预定义的结构，然后在进行存储的时候需要分类存储，这种方式成本较大。并且检索所需要的结构也是静态的，无法适应动态的环境，并且进行动态的修改结构时复杂度较高。
+
+ ## 2.使用组件存储库支持软件重用
+
+有两种基本技术已经用于软件重用方法中：基于组合的重用（也称为基于部件或基
+于组件的重用）和生成技术（基于语言的重用）
+
+**基于组合的重用**
+
+组件是*自包含*的实体，例如库例程、数据结构、程序、对象等。
+
+> 自包含：本身含有，不需要依赖其他程序
+
+重用这些组件是通过开发人员人工完成的。
+
+> 种方法我理解为是类似于开源库中的API代码，使用时直接调用。
+
+**生成技术**
+
+生成方法与编译器技术密切相关，在编译器技术中，用户选择调用参数
+化代码片段来创建定制的应用程序。
+
+> 我理解为这种方法是根据参数配置生成代码片段（组件）
+
+### 2.1 组件存储库
+
+用于软件存储库的检索方法可分为三类：枚举分类、分面和自由文本索引
+
+**枚举分类**
+
+信息被放置在通常以子类别层次结构构成的类别中。
+
+分类方案的吸引力在于能够迭代地将信息空间划分为更小的部分，从而减少需要仔
+细阅读的信息量。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
