--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
@@ -30,22 +30,40 @@
 
 ### 2.1 组件存储库
 
-用于软件存储库的检索方法可分为三类：枚举分类、分面和自由文本索引
+用于软件存储库的检索方法可分为三类：枚举分类、刻面和自由文本检索
 
 **枚举分类**
 
 信息被放置在通常以子类别层次结构构成的类别中。
 
 分类方案的吸引力在于能够迭代地将信息空间划分为更小的部分，从而减少需要仔
-细阅读的信息量。2
+细阅读的信息量。
 
+枚举分类涉及的问题：固有的不灵活性和理解大型层次结构的问题
 
+> 其分类结构层次是不灵活的，一旦结构划分完毕，如果再进行结构的变更的话会对整个分类都产生影响。
 
+**刻面分类法（Faceted classification）**
 
+> 使用一组刻面来对构件进行分类的方法。刻面是一个单词或短语的固定集合，用于描述构件的某个方面或视角。[刻面分类法](https://www.termonline.cn/search?k=%E5%88%BB%E9%9D%A2%E5%88%86%E7%B1%BB%E6%B3%95&r=1656251207699)
+>
+> 刻面分类法是将描述构件本质特征的属性视为若干个独立的“面”，每个刻面从不同视角对构件库的构件进行划分。
 
+通过定义不同的属于实例化属性类，避免层次结构中组件定义的枚举。在关系模型中术语被分组为固定数量的互斥方面。用户通过为每个面指定一个术语来搜索组件。
 
+**自由文本检索**
 
+使用文档中的文本进行索引。
 
+> 我理解为根据文档进行检索？根据相应的关键词
+
+自由文本检索构建和检索比较简单，但是依赖于语言文本中的规律行，这些规律的准确性建立在大量文本统计的基础之上。
+
+自由文本检索最适用于包含大量文档的领域。
+
+自由文本检索方法构建存储库的成本较低并且构建性能比较好，但是，在文本密集型领域的效率不高
+
+### 2.2存储库结构和检索效率
 
 
 
