--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
@@ -65,13 +65,64 @@
 
 ### 2.2存储库结构和检索效率
 
+结构与有效检索之间的关系是什么？使用最小结构的存储库是否
+可以实现足够的检索效率？
 
+## 3  CODEFINDER：软件重用的信息访问
 
+本文描述的原型系统称为PEEL（Parse and Extract Emacs Lisp），它从文本文件中提取组件，并通过自动提取和交互式用户支持的组合对其进行索引。
 
+相关反馈和自适应索引是两种可以用来改进存储库结构的方法
 
+这种方法的总体优势是，成本是根据需要递增的，而不需要大量的前期存储库设
+计工作
 
+存储库需要（1）创建初始信息结构的工具，（2）灵活的搜索和浏览存储库（3）在用户使用存储库时优化和调整信息的工具。
 
+CodeFinder和PEEL的结合通过支持源代码组件半自动提取、查询构造技术和自适应索引设施的方法实现了这一目标。
 
+### 3.1 CodeFinder PEEL存储库
 
+CodeFinder和PEEL旨在研究与构建和使用存储库来支持设计过程相关的成本/收
+益权衡。
 
+> 举了一个使用他们的例子
 
+## 4. 为存储库设定种子
+
+种子库是通过使用关键术语和短语对组件表示进行索引来创建组件表示的问题。组
+件可以采用任何大小或形式，具体取决于存储库用户的需要
+
+PEEL是一种再工程工具，它将Emacs Lisp文件转换为基于框架的知识表示语言Kandor中的单个可重用组件 
+
+Kandor表示可以被视为一组属性/值槽，其中包含有关给定组件的信息 。PEEL用于捕获该信息并将其放置在Kandor插槽中
+
+PEEL使用**三步程序**处理术语，类似于在Basili的软件工厂提取组件的过程
+
++ 第一步是完全自动化的。术语是从函数名和定义内或定义前的任何字符串或注释中提取的。 
++ 第二步是向用户显示术语，用户可以删除术语，截断列表并在源代码窗口中突出显示术语，以显示术语的使用方式和位置
++ 第三步允许用户添加自己的术语，包括短语（用空格分隔的单词）和任何其他标点符号。
+
+CodeFinder还创建指向组件调用的所有函数的超链接，只需单击鼠标即可显示组件的直接子系统。
+
+> Halstead和McCabe指标可以用来度量组件的好坏
+
+## 5. 补偿不完整和不一致的索引
+
+信息检索接口需要解决两个主要问题：
+
++ 第一个是设计问题的本质，在设计过程中，人们对需要什么以及应该如何解决问题有一个不明确的概念
++ 第二个问题是，文档索引通常不一致且不完整。
+
+> 人们根据关键词检索组件的时候，对同一个组件的描述可能不同，因此，在做组件检索的时候应该推荐关键词相关功能的组件。
+
+不一致的索引总是存在的，因此有必要使用超越简单的关键字匹配方案的检索方法和算法
+
+“智能”检索由关联扩散激活检索算法提供【Mozer 1984】，该算法扩展了精确匹配范式，以检索与查询关联的项目。该算法扩展了精确匹配范式，以检索与查询关联的项目
+
+> 研究表明这个算法挺有用
+
+### 5.1 扩展激活检索
+
+CodeFinder构建一个关联网络，然后，将基于连接主义松弛检索过程的关联扩展激活过
+程应用于网络以检索信息
