--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
@@ -2,11 +2,13 @@
 
 **文章的目的**：描述软件存储库的索引和检索问题，并提供一组旨在支持组件存储库增量优化的工具。
 
+PEEL是一种半自动识别可重用组件的工具， CodeFinder是一种检索系统，通过扩展激活检索过程来弥补显式知识结构的不足
+
 ## 其他的检索算法
 
 在进行组件存储和检索的时候需要有一个预定义的结构，然后在进行存储的时候需要分类存储，这种方式成本较大。并且检索所需要的结构也是静态的，无法适应动态的环境，并且进行动态的修改结构时复杂度较高。
 
- ## 2.使用组件存储库支持软件重用
+## 2.使用组件存储库支持软件重用
 
 有两种基本技术已经用于软件重用方法中：基于组合的重用（也称为基于部件或基
 于组件的重用）和生成技术（基于语言的重用）
