--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/备注.md
@@ -88,12 +88,12 @@ term
 
 自由文本检索方法构建存储库的成本较低并且构建性能比较好，但是，在文本密集型领域的效率不高
 
-### 2.2存储库结构和检索效率
+### 2.2。存储库结构和检索效率
 
 结构与有效检索之间的关系是什么？使用最小结构的存储库是否
 可以实现足够的检索效率？
 
-这些方法定义了一个连续体，需要广泛结构的jkl类到需要较少结构的刻面l 类，到需要结构的自由文本索引
+这些方法定义了一个连续体，需要广泛结构的类到需要较少结构的刻面类，到需要结构的自由文本索引
 
 使用复杂信息结构的方法的优势在于，人们可以使用结构中包含的知识来引导他们获得相关信息，缺点是如果信息的结构与用户期望不一致，则不可能提供支持。
 
@@ -103,8 +103,7 @@ term
 
 相关反馈和自适应索引是两种可以用来改进存储库结构的方法
 
-这种方法的总体优势是，成本是根据需要递增的，而不需要大量的前期存储库设
-计工作
+这种方法的总体优势是，成本是根据需要递增的，而不需要大量的前期存储库设计工作
 
 存储库需要（1）创建初始信息结构的工具，（2）灵活的搜索和浏览存储库（3）在用户使用存储库时优化和调整信息的工具。
 
@@ -114,8 +113,7 @@ CodeFinder和PEEL的结合通过支持源代码组件半自动提取、查询构
 
 ### 3.1 CodeFinder PEEL存储库
 
-CodeFinder和PEEL旨在研究与构建和使用存储库来支持设计过程相关的成本/收
-益权衡。
+CodeFinder和PEEL旨在研究与构建和使用存储库来支持设计过程相关的成本/收益权衡。
 
 > 举了一个使用他们的例子
 
@@ -140,6 +138,10 @@ PEEL使用**三步程序**处理术语，类似于在Basili的软件工厂提取
 CodeFinder还创建指向组件调用的所有函数的超链接，只需单击鼠标即可显示组件的直接子系统。
 
 > Halstead和McCabe指标可以用来度量组件的好坏
+>
+> [Halstead ](https://www.ibm.com/docs/zh/addi/5.0.4?topic=reports-halstead-complexity-report)    [McCabe](https://www.ibm.com/docs/zh/addi/5.0.4?topic=reports-complexity)
+>
+> Halstead 复杂度 (Maurice H. Halstead, 1977) 是软件科学提出的第一个计算机软件的分析“定律”，用以确定计算机软件开发中的一些定量规律。
 
 ## 5. 补偿不完整和不一致的索引
 
