--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
@@ -1,12 +1,30 @@
+# Retrieval on Source Code: A Neural Code Search
+
+在本文中，我们关注另一种开发人员生产力工具：代码搜索。开发人员经常搜索如何完成特定编码任务的示例。
+
+主要是以方法或函数的粒度为一段代码创建一个自然语言“文档”。
+
+### Extracting Information from Source Code
+
+方法名：提取方法名称，并将其与包含方法的类名一起使用。
+
+方法调用：方法调用可以说是代码块中最重要的信息，因为它们给出了关于代码中正在发生的事情的提示。其他功能，如控制流，也很重要，但不容易用自然语言表达。
+
+枚举：与局部变量不同，这些常量的命名非常谨慎，包含有关程序状态的有意义的信息。
+
+字符串：它们通常包括面向人的文本和文档，两者都包含我们提取的有用单词。
+
+注释：它们包含非常有用的信息，因为它们已经是代码的自然语言描述。
+
 # A Survey For Effective Search And Retrieval Of Components From Software Repositories
+
+> 主要还是在讲组件库的事情
 
 PEEL extracts source code definitions of functions, constants,variables and macros from a source code file
 
 PEEL从源代码文件中提取函数、常量、变量和宏的源代码定义
 
 然后将这些信息提取并翻译成kandor对象.Kandor表示可以被视为一组包含组件信息的属性
-
-
 
 # An Evolutionary Approach to Constructing Effective Software Reuse Repositories
 
@@ -128,3 +146,7 @@ PEEL使用三步程序处理术语：
 + 可靠性-整体系统可靠性提高，因为每个组件的可靠性通过重用提高了整个系统的可靠性。
 + 系统维护和进化-易于更改和更新实现，而不会影响系统的其他部分。
 + 独立的− 组件的独立性和灵活连接。由不同组并行独立开发组件。软件开发和未来软件开发的生产力。
+
+# 代码提取参考
+
+[CCodeExtractor:一种针对 C 程序自动化的函数提取方法](http://staff.ustc.edu.cn/~yuzhang/papers/CCodeExtractor.pdf)
