--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
@@ -1,20 +1,41 @@
-# Retrieval on Source Code: A Neural Code Search
+# A MULTI-OBJECTIVE SEARCH BASED APPROACH TO IDENTIFY REUSABLE SOFTWARE COMPONENTS
 
-在本文中，我们关注另一种开发人员生产力工具：代码搜索。开发人员经常搜索如何完成特定编码任务的示例。
+>  基于组件的软件开发（CBSD）
+>
+> 基于组件的软件工程(CBSE)
+>
+> Reusable Software Component Identification (RSCI)
+>
+> Multi-Objective Evolutionary Optimization (MOEO)
+>
+>  Frequent Usage Pattern (FUP) based cohesion
 
-主要是以方法或函数的粒度为一段代码创建一个自然语言“文档”。
+**当前文章所做的东西**：本文提出了一种可扩展的多目标搜索方法，用于从软件系统的源代码中识别可复用的软件构件
 
-### Extracting Information from Source Code
 
-方法名：提取方法名称，并将其与包含方法的类名一起使用。
 
-方法调用：方法调用可以说是代码块中最重要的信息，因为它们给出了关于代码中正在发生的事情的提示。其他功能，如控制流，也很重要，但不容易用自然语言表达。
+对于面向对象软件范式，我们将组件视为一个单独的类或一组连接的类，这些类可以在最少修改的情况下重用。
 
-枚举：与局部变量不同，这些常量的命名非常谨慎，包含有关程序状态的有意义的信息。
+为了识别这种关系，本文提出了三种关系：1)基于频繁使用模式的衔接；2)基于语义关联性的衔接；3)基于共变的耦合
 
-字符串：它们通常包括面向人的文本和文档，两者都包含我们提取的有用单词。
+**这篇论文中给出的组件的定义**：组件被认为是几个相互作用以提供特定系统功能的相关对象的集合。
 
-注释：它们包含非常有用的信息，因为它们已经是代码的自然语言描述。
+文献中对软构件识别的研究分为两个层次：设计层和面向对象(OO)源代码层。
+
+**对文中所提出的识别可重用组件方法有两种评估办法**
+
++ 一个众所周知的模块化指标，称为TurboMQ，用于评估原始系统的模块化和获得的组件。
++ 同时使用这三种关系的必要性通过制定总共六个不同的方案进一步证实了这一点。这些方案是通过将不同的关系视为个体、成对来设计的。最后，将这些公式化方案与所提出的方法（同时使用这三种关系）进行比较。
+
+在文献中，已经提出了许多用于软件构件识别的方法，现有的RSCI技术依赖于测量由于方法调用、类型共享、用例、序列、类协作图和/或动态跟踪而产生的依赖关系。这些方法还使用各种集群技术和/或使用模型来执行分组和识别组件。然而，没有这样的方法侧重于基于系统中的成员变量使用(FUP)来度量依赖项。
+
+作者认为，基于FUP的依赖关系对于可复用构件识别是必要的。
+
+来自软件系统源代码的RSCI需要将底层体系结构分类为模块单元(也称为软件分配问题)。所谓底层体系结构，我们指的是软件的原始包结构，可重用软件组件将从该结构中识别出来。
+
+本文首先利用从软件系统底层变更历史中获取的频繁使用模式(FUP)、语义关联度和共变关系三个参数来计算不同软件元素之间的内聚和耦合。FUP和语义关联度被用来衡量衔接强度，共变关系被用来衡量耦合强度。
+
+
 
 # A Survey For Effective Search And Retrieval Of Components From Software Repositories
 
@@ -150,3 +171,25 @@ PEEL使用三步程序处理术语：
 # 代码提取参考
 
 [CCodeExtractor:一种针对 C 程序自动化的函数提取方法](http://staff.ustc.edu.cn/~yuzhang/papers/CCodeExtractor.pdf)
+
+##  Retrieval on Source Code: A Neural Code Search
+
+> 这篇文章主要是检索代码中的方法信息，做的是一个在源代码上检索有效代码的检索系统
+
+在本文中，我们关注另一种开发人员生产力工具：代码搜索。开发人员经常搜索如何完成特定编码任务的示例。
+
+主要是以方法或函数的粒度为一段代码创建一个自然语言“文档”。
+
+### Extracting Information from Source Code
+
+我们改为使用基于解析器的方法，在该方法中，我们遍历每个方法的解析树，并从以下语法类别中提取信息
+
+方法名：提取方法名称，并将其与包含方法的类名一起使用。
+
+方法调用：方法调用可以说是代码块中最重要的信息，因为它们给出了关于代码中正在发生的事情的提示。其他功能，如控制流，也很重要，但不容易用自然语言表达。
+
+枚举：与局部变量不同，这些常量的命名非常谨慎，包含有关程序状态的有意义的信息。
+
+字符串：它们通常包括面向人的文本和文档，两者都包含我们提取的有用单词。
+
+注释：它们包含非常有用的信息，因为它们已经是代码的自然语言描述
