--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
@@ -12,8 +12,6 @@
 
 **当前文章所做的东西**：本文提出了一种可扩展的多目标搜索方法，用于从软件系统的源代码中识别可复用的软件构件
 
-
-
 对于面向对象软件范式，我们将组件视为一个单独的类或一组连接的类，这些类可以在最少修改的情况下重用。
 
 为了识别这种关系，本文提出了三种关系：1)基于频繁使用模式的衔接；2)基于语义关联性的衔接；3)基于共变的耦合
@@ -35,6 +33,16 @@
 
 本文首先利用从软件系统底层变更历史中获取的频繁使用模式(FUP)、语义关联度和共变关系三个参数来计算不同软件元素之间的内聚和耦合。FUP和语义关联度被用来衡量衔接强度，共变关系被用来衡量耦合强度。
 
+# Extracting reusable components: A semi-automated approach for complex structures
+
+> candidate component (CC)  候选组件CC
+>
+> Candidate Component Size (CCS)  候选组件尺寸（CCS）
+
+我们提出了一个半自动的过程，指导软件工程师解开复杂的结构，以提取可复用的组件。该过程包括迭代分析，以识别和转换负责结构复杂性的类，并有效地减少候选组件的大小。
+
+系统的结构被建模为有向图G=⟨V，E⟩，其中节点V和边E的集合分别表示类和它们之间的使用关系。使用关系包括类之间的所有类型的依赖关系，即继承、方法调用等。 
+
 
 
 # A Survey For Effective Search And Retrieval Of Components From Software Repositories
@@ -43,7 +51,7 @@
 
 PEEL extracts source code definitions of functions, constants,variables and macros from a source code file
 
-PEEL从源代码文件中提取函数、常量、变量和宏的源代码定义
+**PEEL从源代码文件中提取函数、常量、变量和宏的源代码定义**
 
 然后将这些信息提取并翻译成kandor对象.Kandor表示可以被视为一组包含组件信息的属性
 
@@ -73,10 +81,12 @@ PEEL使用三步程序处理术语：
 
 ### 组件
 
+组件的一般用途是将其集成到软件系统中。它是在领域工程过程(资产生成)或应用工程过程(软件开发)的实现阶段产生的资产的特殊形式(通用术语)。尽管术语组件通常与面向对象的范例(它很好地支持模块化系统的构建)直接相关，但组件不一定是对象。
+
 #### 组件作为方法（功能）实体
 
 + 软件组件是具有良好定义和发布的接口的可执行软件的物理打包。
-+ 软件组件是独立生产、获取和部署的二进制单位，相互作用形成一个功能系统的一部分。”此外，该定义强调可执行性、接近性（至少通过用作二进制软件包）以及通过组件的接口的可访问性。此外，有人强调，组件并不存在，而是构成更大系统的基石
++ 软件组件是独立生产、获取和部署的二进制单位，相互作用形成一个功能系统的一部分。”此外，该定义强调可执行性、封闭性（至少通过作为二进制包使用）以及通过组件的接口的可访问性。
 + 关于组件的结构和功能的知识可以是可访问的，也可以是不可访问的，但是接口必须被明确地定义，其包括所提供的服务以及如何访问它们的完整列表、一般依赖关系或可能的错误条件。
 
 #### 作为抽象载体的组件
@@ -90,8 +100,6 @@ PEEL使用三步程序处理术语：
 
 
 ## 自动获取描述（Obtaining descriptions automatically）
-
-
 
 #### 四维分类框架
 
